--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "phpcs"
     ],
     "require": {
-        "php" : "^7.1",
+        "php": "^7.1",
+        "escapestudios/symfony2-coding-standard": "^3.0",
         "object-calisthenics/phpcs-calisthenics-rules": "^3.1",
         "squizlabs/php_codesniffer": "^3.1",
         "wp-coding-standards/wpcs": "^0.13.1"
