Add license in composer.json

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Official Geolid coding standard.",
     "homepage": "https://github.com/Geolid/phpcs",
     "type": "library",
+    "license": "MIT",
     "keywords": [
         "phpcs"
     ],
