--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": "^7.1",
         "escapestudios/symfony2-coding-standard": "^3.0",
         "object-calisthenics/phpcs-calisthenics-rules": "^3.1",
+        "slevomat/coding-standard": "^4.0",
         "squizlabs/php_codesniffer": "^3.1",
         "wp-coding-standards/wpcs": "^0.13.1"
     },
