--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -3,7 +3,7 @@
     <arg name="basepath" value="."/>
     <arg name="colors" />
     <arg name="parallel" value="75" />
-    <arg value="np"/>
+    <arg value="p"/>
 
     <file>src</file>
     <file>public/index.php</file>
