--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,18 @@
     "require": {
         "php": "^7.3",
         "escapestudios/symfony2-coding-standard": "^3.5",
+        "friendsofphp/php-cs-fixer": "^2.14",
         "object-calisthenics/phpcs-calisthenics-rules": "^3.5",
         "slevomat/coding-standard": "^5.0",
-        "squizlabs/php_codesniffer": "^3.4",
-        "wp-coding-standards/wpcs": "^2.0"
+        "squizlabs/php_codesniffer": "^3.4"
     },
     "config": {
         "sort-packages": true
     },
     "scripts": {
-        "test": "vendor/bin/phpcs --standard=src/Geolid/ruleset.xml tests/Example/"
+        "test": [
+            "vendor/bin/phpcs --standard=src/Geolid/ruleset.xml tests/Example/",
+            "vendor/bin/php-cs-fixer fix tests/ --dry-run --config=src/Geolid/.php_cs.php --diff --using-cache=no"
+        ]
     }
 }
