--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "coding style"
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "escapestudios/symfony2-coding-standard": "^3.10",
         "friendsofphp/php-cs-fixer": "^2.16.1",
         "object-calisthenics/phpcs-calisthenics-rules": "^3.7",
