--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "squizlabs/php_codesniffer": "^3.5.3"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "scripts": {
         "test": [
