--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: "3"
 
 services:
   app:
-    image: geolid/php:7.4-dev
+    image: geolid/php:${PHP_IMAGE_VERSION:-8.1}
     volumes:
       - .:/srv
+    environment:
+      USER_ID: ${USER_ID:-1000}
+    command: [ "php-fpm" ]
