--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: "3"
 
 services:
   app:
-    image: geolid/php:7.4-dev
+    image: geolid/php:${PHP_IMAGE_VERSION:-8.1}
     volumes:
       - .:/srv
