--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,6 @@ services:
     image: geolid/php:${PHP_IMAGE_VERSION:-8.1}
     volumes:
       - .:/srv
+    environment:
+      USER_ID: ${USER_ID:-1000}
+    command: [ "php-fpm" ]
